--- a/magic/fixtures/spells.yaml
+++ b/magic/fixtures/spells.yaml
@@ -87,6 +87,380 @@
     classes: ["bard", "sorcerer", "warlock", "wizard"]
 
 # =============================================================================
+# CANTRIPS (Level 0) - Additional SRD spells
+# =============================================================================
+
+- model: magic.spellsettings
+  fields:
+    name: Blade Ward
+    level: 0
+    school: abjuration
+    casting_time: action
+    range: self
+    components: ["V", "S"]
+    duration: 1_round
+    concentration: false
+    ritual: false
+    description: >
+      You extend your hand and trace a sigil of warding in the air. Until the end of your next turn,
+      you have resistance against bludgeoning, piercing, and slashing damage dealt by weapon attacks.
+    classes: ["bard", "sorcerer", "warlock", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Chill Touch
+    level: 0
+    school: necromancy
+    casting_time: action
+    range: 120_feet
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      You create a ghostly, skeletal hand in the space of a creature within range. Make a ranged spell
+      attack against the creature to assail it with the chill of the grave. On a hit, the target takes
+      1d8 necrotic damage, and it can't regain hit points until the start of your next turn. Until then,
+      the hand clings to the target. If you hit an undead target, it also has disadvantage on attack
+      rolls against you until the end of your next turn. This spell's damage increases by 1d8 at 5th,
+      11th, and 17th level.
+    classes: ["sorcerer", "warlock", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Dancing Lights
+    level: 0
+    school: illusion
+    casting_time: action
+    range: 120_feet
+    components: ["V", "S", "M"]
+    material_components: a bit of phosphorus or wychwood, or a glowworm
+    duration: 1_minute
+    concentration: true
+    ritual: false
+    description: >
+      You create up to four torch-sized lights within range, making them appear as torches, lanterns, or
+      glowing orbs that hover in the air for the duration. You can also combine the four lights into one
+      glowing vaguely humanoid form of Medium size. Whichever form you choose, each light sheds dim light
+      in a 10-foot radius. As a bonus action on your turn, you can move the lights up to 60 feet to a
+      new spot within range. A light must be within 20 feet of another light created by this spell, and
+      a light winks out if it exceeds the spell's range.
+    classes: ["bard", "sorcerer", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Eldritch Blast
+    level: 0
+    school: evocation
+    casting_time: action
+    range: 120_feet
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      A beam of crackling energy streaks toward a creature within range. Make a ranged spell attack
+      against the target. On a hit, the target takes 1d10 force damage. The spell creates more than one
+      beam when you reach higher levels: two beams at 5th level, three beams at 11th level, and four
+      beams at 17th level. You can direct the beams at the same target or at different ones.
+    classes: ["warlock"]
+
+- model: magic.spellsettings
+  fields:
+    name: Friends
+    level: 0
+    school: enchantment
+    casting_time: action
+    range: self
+    components: ["S", "M"]
+    material_components: a small amount of makeup applied to the face as this spell is cast
+    duration: 1_minute
+    concentration: true
+    ritual: false
+    description: >
+      For the duration, you have advantage on all Charisma checks directed at one creature of your
+      choice that isn't hostile toward you. When the spell ends, the creature realizes that you used
+      magic to influence its mood and becomes hostile toward you. A creature prone to violence might
+      attack you. Another creature might seek retribution in other ways, at the DM's discretion.
+    classes: ["bard", "sorcerer", "warlock", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Guidance
+    level: 0
+    school: divination
+    casting_time: action
+    range: touch
+    components: ["V", "S"]
+    duration: 1_minute
+    concentration: true
+    ritual: false
+    description: >
+      You touch one willing creature. Once before the spell ends, the target can roll a d4 and add the
+      number rolled to one ability check of its choice. It can roll the die before or after making the
+      ability check. The spell then ends.
+    classes: ["cleric", "druid"]
+
+- model: magic.spellsettings
+  fields:
+    name: Mending
+    level: 0
+    school: transmutation
+    casting_time: 1_minute
+    range: touch
+    components: ["V", "S", "M"]
+    material_components: two lodestones
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      This spell repairs a single break or tear in an object you touch, such as a broken chain link,
+      two halves of a broken key, a torn cloak, or a leaking wineskin. As long as the break or tear is
+      no larger than 1 foot in any dimension, you mend it, leaving no trace of the former damage. This
+      spell can physically repair a magic item or construct, but the spell can't restore magic to such
+      an object.
+    classes: ["bard", "cleric", "druid", "sorcerer", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Message
+    level: 0
+    school: transmutation
+    casting_time: action
+    range: 120_feet
+    components: ["V", "S", "M"]
+    material_components: a short piece of copper wire
+    duration: 1_round
+    concentration: false
+    ritual: false
+    description: >
+      You point your finger toward a creature within range and whisper a message. The target (and only
+      the target) hears the message and can reply in a whisper that only you can hear. You can cast this
+      spell through solid objects if you are familiar with the target and know it is beyond the barrier.
+      Magical silence, 1 foot of stone, 1 inch of common metal, a thin sheet of lead, or 3 feet of wood
+      blocks the spell. The spell doesn't have to follow a straight line and can travel freely around
+      corners or through openings.
+    classes: ["bard", "sorcerer", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Minor Illusion
+    level: 0
+    school: illusion
+    casting_time: action
+    range: 30_feet
+    components: ["S", "M"]
+    material_components: a bit of fleece
+    duration: 1_minute
+    concentration: false
+    ritual: false
+    description: >
+      You create a sound or an image of an object within range that lasts for the duration. The illusion
+      also ends if you dismiss it as an action or cast this spell again. If you create a sound, its volume
+      can range from a whisper to a scream. If you create an image of an object, it must be no larger than
+      a 5-foot cube. The image can't create sound, light, smell, or any other sensory effect. Physical
+      interaction with the image reveals it to be an illusion, as a creature can pass through it.
+    classes: ["bard", "sorcerer", "warlock", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Poison Spray
+    level: 0
+    school: conjuration
+    casting_time: action
+    range: 30_feet
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      You extend your hand toward a creature you can see within range and project a puff of noxious gas
+      from your palm. The creature must succeed on a Constitution saving throw or take 1d12 poison damage.
+      This spell's damage increases by 1d12 when you reach 5th level (2d12), 11th level (3d12), and
+      17th level (4d12).
+    classes: ["druid", "sorcerer", "warlock", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Ray of Frost
+    level: 0
+    school: evocation
+    casting_time: action
+    range: 60_feet
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      A frigid beam of blue-white light streaks toward a creature within range. Make a ranged spell attack
+      against the target. On a hit, it takes 1d8 cold damage, and its speed is reduced by 10 feet until
+      the start of your next turn. This spell's damage increases by 1d8 at 5th, 11th, and 17th level.
+    classes: ["sorcerer", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Resistance
+    level: 0
+    school: abjuration
+    casting_time: action
+    range: touch
+    components: ["V", "S", "M"]
+    material_components: a miniature cloak
+    duration: 1_minute
+    concentration: true
+    ritual: false
+    description: >
+      You touch one willing creature. Once before the spell ends, the target can roll a d4 and add the
+      number rolled to one saving throw of its choice. It can roll the die before or after making the
+      saving throw. The spell then ends.
+    classes: ["cleric", "druid"]
+
+- model: magic.spellsettings
+  fields:
+    name: Sacred Flame
+    level: 0
+    school: evocation
+    casting_time: action
+    range: 60_feet
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      Flame-like radiance descends on a creature that you can see within range. The target must succeed
+      on a Dexterity saving throw or take 1d8 radiant damage. The target gains no benefit from cover for
+      this saving throw. This spell's damage increases by 1d8 when you reach 5th level (2d8), 11th level
+      (3d8), and 17th level (4d8).
+    classes: ["cleric"]
+
+- model: magic.spellsettings
+  fields:
+    name: Shillelagh
+    level: 0
+    school: transmutation
+    casting_time: bonus_action
+    range: touch
+    components: ["V", "S", "M"]
+    material_components: mistletoe, a shamrock leaf, and a club or quarterstaff
+    duration: 1_minute
+    concentration: false
+    ritual: false
+    description: >
+      The wood of a club or quarterstaff you are holding is imbued with nature's power. For the duration,
+      you can use your spellcasting ability instead of Strength for the attack and damage rolls of melee
+      attacks using that weapon, and the weapon's damage die becomes a d8. The weapon also becomes magical,
+      if it isn't already. The spell ends if you cast it again or if you let go of the weapon.
+    classes: ["druid"]
+
+- model: magic.spellsettings
+  fields:
+    name: Shocking Grasp
+    level: 0
+    school: evocation
+    casting_time: action
+    range: touch
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      Lightning springs from your hand to deliver a shock to a creature you try to touch. Make a melee
+      spell attack against the target. You have advantage on the attack roll if the target is wearing
+      armor made of metal. On a hit, the target takes 1d8 lightning damage, and it can't take reactions
+      until the start of its next turn. This spell's damage increases by 1d8 at 5th, 11th, and 17th level.
+    classes: ["sorcerer", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Spare the Dying
+    level: 0
+    school: necromancy
+    casting_time: action
+    range: touch
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      You touch a living creature that has 0 hit points. The creature becomes stable. This spell has no
+      effect on undead or constructs.
+    classes: ["cleric", "druid"]
+
+- model: magic.spellsettings
+  fields:
+    name: Thaumaturgy
+    level: 0
+    school: transmutation
+    casting_time: action
+    range: 30_feet
+    components: ["V"]
+    duration: 1_minute
+    concentration: false
+    ritual: false
+    description: >
+      You manifest a minor wonder, a sign of supernatural power, within range. You create one of the
+      following magical effects within range: your voice booms up to three times as loud as normal for
+      1 minute; you cause flames to flicker, brighten, dim, or change color for 1 minute; you cause
+      harmless tremors in the ground for 1 minute; you create an instantaneous sound that originates
+      from a point of your choice within range; you instantaneously cause an unlocked door or window to
+      fly open or slam shut; or you alter the appearance of your eyes for 1 minute. If you cast this
+      spell multiple times, you can have up to three of its 1-minute effects active at a time.
+    classes: ["cleric"]
+
+- model: magic.spellsettings
+  fields:
+    name: Toll the Dead
+    level: 0
+    school: necromancy
+    casting_time: action
+    range: 60_feet
+    components: ["V", "S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      You point at one creature you can see within range, and the sound of a dolorous bell fills the air
+      around it for a moment. The target must succeed on a Wisdom saving throw or take 1d8 necrotic damage.
+      If the target is missing any of its hit points, it instead takes 1d12 necrotic damage. This spell's
+      damage increases by one die when you reach 5th level, 11th level, and 17th level.
+    classes: ["cleric", "warlock", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: True Strike
+    level: 0
+    school: divination
+    casting_time: action
+    range: self
+    components: ["S"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      You extend your hand and point a finger at a target in range. Your magic grants you a brief insight
+      into the target's defenses. On your next turn, you gain advantage on your first attack roll against
+      the target, provided that this spell hasn't ended.
+    classes: ["bard", "sorcerer", "warlock", "wizard"]
+
+- model: magic.spellsettings
+  fields:
+    name: Vicious Mockery
+    level: 0
+    school: enchantment
+    casting_time: action
+    range: 60_feet
+    components: ["V"]
+    duration: instantaneous
+    concentration: false
+    ritual: false
+    description: >
+      You unleash a string of insults laced with subtle enchantments at a creature you can see within
+      range. If the target can hear you (though it need not understand you), it must succeed on a Wisdom
+      saving throw or take 1d4 psychic damage and have disadvantage on the next attack roll it makes
+      before the end of its next turn. This spell's damage increases by 1d4 at 5th, 11th, and 17th level.
+    classes: ["bard"]
+
+# =============================================================================
 # LEVEL 1 SPELLS
 # =============================================================================
 
